fix: fix rounding to be more accurate + handle no query params req

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "description": "",
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "wrangler publish",
+    "dev": "wrangler dev"
   },
   "dependencies": {},
   "devDependencies": {
