--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "wrangler publish",
+    "publish": "wrangler deploy",
     "dev": "wrangler dev"
   },
   "dependencies": {},
