--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "scripts": {
     "build": "npx tsc",
+    "typecheck": "npx tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "wrangler deploy",
     "dev": "wrangler dev"
