--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   "description": "",
   "scripts": {
     "build": "npx tsc",
+    "lint": "eslint .",
     "typecheck": "npx tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "wrangler deploy",
     "dev": "wrangler dev"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "9.33.0",
     "@types/node": "22.15.17",
+    "eslint": "9.33.0",
+    "globals": "16.3.0",
+    "jiti": "2.5.1",
     "typescript": "5.8.3",
+    "typescript-eslint": "8.39.1",
     "wrangler": "4.14.4"
   }
 }
